--- a/03-功能包Python节点/python_package/package.xml
+++ b/03-功能包Python节点/python_package/package.xml
@@ -8,7 +8,7 @@
   <license>Apache-2.0</license>
 
   <!-- 运行依赖 -->
-  <depend>rclpy<depend>
+  <depend>rclpy</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
